[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hrcl_jobs"
version = "1.2.0"
authors = [
  { name="Austin M. Wallace", email="awallace43@gatech.edu" },
]
description = "Runs python functions on worker threads with main thread communicating with sql db"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Awallace3/hierarchical_python_jobs"
"Bug Tracker" = "https://github.com/Awallace3/hierarchical_python_jobs/issues"
