[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hrcl_jobs"
version = "1.6.0"
authors = [
  { name="Austin M. Wallace", email="awallace43@gatech.edu" },
]
description = "Runs python functions on worker threads with main thread communicating with sql db"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "qm_tools_aw",
    "numpy>=1.20.0",
    "pandas>=1.4.3"

]
[project.optional-dependencies]
psi4_calculations = [
    "psi4>=1.7",
]
ad4_vina_calculations = [
    "autodock-vina",
]
openmm_calculations = [
    "openmm",
]

[project.urls]
"Homepage" = "https://github.com/Awallace3/hierarchical_python_jobs"
"Bug Tracker" = "https://github.com/Awallace3/hierarchical_python_jobs/issues"
