[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    matplotlib
    qm_tools_aw
    sqlite3
    mpi4py==3.1.3
    numpy>=1.20.0
    pandas>=1.4.3

[options.packages.find]
where = src
exclude =
    examples*
    docs*

[options.extras_require]
psi4 = psi4>=1.7;
